tdf#150753: always do the final steps, including unlocking draw model

Otherwise, it's impossible to select objects added to the document
created from a template without content.xml, until save-and-reload,
because they never recalculate their bounds.

Change-Id: Id97f0ff14be33196703b6f0ade713203ff10df74
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139796
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>